# itree

./: .clang-format  .gitmodules  README.md  build_wheel.py  clean.sh  pyproject.toml  readthedocs.yml  release.sh  requirements.txt  run.sh  setup.py
.github/workflows/: build_wheel.yml
docs/: api.rst  changes.rst  conf.py  index.md  index.rst  itree.drawio  requirements.txt  tutorial.md
itree/: CMakeLists.txt  __init__.py  b64.h  common.cpp  common.h  fmt.h  forest.h  forest_stats.h  main.cpp  nemo.cpp  nemo.h  node.cpp  node.h  node.py  node_utils.cpp  node_utils.h  pickle.cpp  pickle.h  py_main.cpp  pytypes.h  shared.h  shared.hpp  smap.cpp  smap.h  tree.cpp  tree.h  tree.py  uuid.cpp  version.py
itree/pybind11/include/pybind11/: attr.h  buffer_info.h  cast.h  chrono.h  complex.h  eigen.h  embed.h  eval.h  functional.h  iostream.h  numpy.h  operators.h  options.h  pybind11.h  pytypes.h  stl.h  stl_bind.h
itree/pybind11/include/pybind11/detail/: class.h  common.h  descr.h  init.h  internals.h  type_caster_base.h  typeid.h
itree/pybind11/include/pybind11/stl/: filesystem.h
tests/: test_forest.py  test_latency.py  test_node.py  test_picklable.py  test_picklable_v2.py  test_tree.py  test_utils.py
travis/: build-wheels.sh
